# pystack

./: .buildinfo  .bumpversion.cfg  .gitattributes  .gitignore  .medusarc  .pre-commit-config.yaml  .prettierrc.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  NEWS.rst  README.md  asv.conf.json  changelog.html  corefile.html  customizing_the_reports.html  genindex.html  index.html  multiple_interpreters.html  objects.inv  overview.html  process.html  pyproject.toml  requirements-docs.txt  requirements-extra.txt  requirements-test.txt  search.html  searchindex.js  setup.py  test_file_multiple_interps.py  tox.ini  valgrind.supp  zizmor.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---bug-report.yaml  ---feature-request.yaml  config.yml
.github/workflows/: build.yml  build_wheels.yml  coverage.yml  docs.yml  lint_and_docs.yml  news-check.yml  sanity-check.yml
_sources/: changelog.rst.txt  overview.rst.txt  process.rst.txt
_sources/tutorials/: core_tutorial.rst.txt  deadlock.rst.txt  random_prime_number.rst.txt
_static/css/: custom.css
benchmarks/: README.md  benchmark_colors.py  benchmark_main.py  benchmark_maps.py  benchmark_process.py  benchmark_traceback_formatters.py  benchmark_types.py
build_scripts/: elfutils_contiguous_segments.diff
docs/: Makefile  assert.py  conf.py  core_tutorial.rst  corefile.rst  customizing_the_reports.rst  howitworks.rst  index.rst  installation_and_usage.rst  multiple_interpreters.rst  overview.rst  process.rst
docs/_templates/: index.html
docs/tutorials/: 2.rst  core_tutorial.py  deadlock.py  deadlock.rst  random_prime_number.py  requirements-tutorial.txt
docs/tutorials/exercise_2/: random_prime_number.py
docs/tutorials/solutions/exercise_2/: random_prime_number.py
news/: 108.feature.rst  182.feature.rst  184.bugfix.rst  191.bugfix.rst  194.bugfix.rst  203.feature.rst  204.bugfix.rst  206.feature.rst  213.feature.rst  220.bugfix.rst  221.bugfix.rst  237.removal.1.rst  237.removal.2.rst  240.feature.rst  258.bugfix.rst  270.bugfix.rst  271.feature.rst  272.feature.rst  279.bugfix.rst  279.feature.rst  92.bugfix.rst  add_gzip_support.rst
src/pystack/: __init__.py  __main__.py  _pystack.pyi  _pystack.pyx  colors.py  engine.py  errors.py  maps.py  process.py  traceback_formatter.py  types.py
src/pystack/_pystack/: CMakeLists.txt  bindings.cpp  compat.h  corefile.cpp  corefile.h  corefile.pxd  elf_common.cpp  elf_common.h  elf_common.pxd  interpreter.cpp  interpreter.h  interpreter.pxd  logging.cpp  logging.h  logging.pxd  maps_parser.cpp  maps_parser.h  mem.cpp  mem.h  mem.pxd  native_frame.cpp  native_frame.h  native_frame.pxd  process.cpp  process.h  process.pxd  pycode.cpp  pycode.h  pycode.pxd  pycompat.h  pyframe.cpp  pyframe.h  pyframe.pxd  pythread.cpp  pythread.h  pythread.pxd  pytypes.cpp  pytypes.h  structure.h  thread_builder.cpp  (+8 more)
src/pystack/_pystack/cpython/: code.h  dict.h  float.h  frame.h  gc.h  int.h  interpreter.h  list.h  object.h  pthread.h  runtime.h  string.h  thread.h  tuple.h
tests/: conftest.py  utils.py
tests/integration/: ctypes_program.py  gc_freeze_program.py  inline_calls_program.py  multiple_thread_program.py  multiple_thread_program_gil.py  no_frames_at_shutdown_program.py  position_information_program.py  shim_deallocation_program.py  shutdown_program.py  single_thread_program.py  single_thread_program_gil.py  subinterpreters_nested_same_thread_program.py  subinterpreters_program.py  subinterpreters_shim.py  subinterpreters_two_chains_program.py  subinterpreters_with_threads_program.py  test_core_analyzer.py  test_gather_stacks.py  test_gc.py  test_gil.py  test_local_variables.py  test_process.py  test_relocatable_cores.py  test_shenanigans.py  test_smoke.py  test_subinterpreters.py
tests/integration/corefiles/: core_with_big_name.core  segfault.core  signal.core
tests/integration/empty_thread_extension/: setup.py  testext.cpp
tests/integration/empty_thread_extension_with_os_threads/: main.py  testext.cpp
tests/unit/: test_color.py  test_extension.py  test_main.py  test_maps.py  test_normalize_threads.py  test_process.py  test_traceback_formatter.py  test_types.py
tools/: bump_changelog.sh
tutorials/: core_tutorial.html  deadlock.html  random_prime_number.html
