[build-system]
requires = ["scikit-build-core>=0.4", "nanobind>=1.8"]
build-backend = "scikit_build_core.build"

[project]
name = "pystack"
dynamic = ["version"]
description = "Analysis of the stack of remote python processes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Pablo Galindo Salgado"}
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Homepage = "https://github.com/bloomberg/pystack"

[project.scripts]
pystack = "pystack.__main__:main"

[tool.scikit-build]
wheel.packages = ["src/pystack"]
wheel.install-dir = "pystack"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "src/pystack/_version.py"
sdist.include = ["src/pystack/_version.py"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.ruff]
line-length = 95
select = ["F", "E", "W", "I001"]

[tool.ruff.isort]
force-single-line = true
known-first-party = ["pystack"]
known-third-party=["rich", "elftools", "pytest"]

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party=["pystack"]
known_third_party=["rich", "elftools", "pytest"]

[tool.towncrier]
package = "pystack"
package_dir = "src"
filename = "NEWS.rst"
directory = "news"
type = [
  { name = "Features",                  directory = "feature", showcontent = true },
  { name = "Deprecations and Removals", directory = "removal", showcontent = true },
  { name = "Bug Fixes",                 directory = "bugfix",  showcontent = true },
  { name = "Improved Documentation",    directory = "doc",     showcontent = true },
  { name = "Miscellaneous",             directory = "misc",    showcontent = true },
]
underlines = "-~"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_2"
skip = "*-musllinux_aarch64"

[tool.cibuildwheel.linux]
before-all = [
  "yum install -y libzstd-devel cmake",
  "cd /",
  "VERS=0.193",
  "curl https://sourceware.org/elfutils/ftp/$VERS/elfutils-$VERS.tar.bz2 > ./elfutils.tar.bz2",
  "tar -xf elfutils.tar.bz2",
  "cd elfutils-$VERS",
  "CFLAGS='-Wno-error -g -O3' CXXFLAGS='-Wno-error -g -O3' ./configure --disable-nls --enable-libdebuginfod=dummy --disable-debuginfod --with-zstd",
  "make install"
]

# Override the default linux before-all for musl linux
[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
  # Remove gettext-dev, which conficts with the musl-libintl, which is a build
  # dependency of elfutils.
  "apk del gettext-dev glib-dev",

  # Build the latest elfutils from source. The build steps come from
  # https://git.alpinelinux.org/aports/tree/main/elfutils, and the need to
  # set the FNM_EXTMATCH macro to get the build to succeed is seen here:
  # https://git.alpinelinux.org/aports/tree/main/elfutils/musl-macros.patch
  "cd /",
  "apk add --update argp-standalone bison bsd-compat-headers bzip2-dev flex-dev libtool linux-headers musl-fts-dev musl-libintl musl-obstack-dev xz-dev zlib-dev zstd-dev cmake",
  "VERS=0.193",
  "curl https://sourceware.org/elfutils/ftp/$VERS/elfutils-$VERS.tar.bz2 > ./elfutils.tar.bz2",
  "tar -xf elfutils.tar.bz2",
  "cd elfutils-$VERS",
  "CFLAGS='-Wno-error -DFNM_EXTMATCH=0 -g -O3' CXXFLAGS='-Wno-error -g -O3' ./configure --disable-nls --enable-libdebuginfod=dummy --disable-debuginfod --with-zstd",
  "make install",

  # Reinstall libintl, as the Python interpreter requires it
  "apk del musl-libintl",
  "apk add libintl",
]

[tool.coverage.run]
source = [
  "src/pystack",
]
branch = true
parallel = true
omit = [
  "tests/integration/*program*.py",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
# pytest retains all temp files from the last 3 test suite runs by default.
# Keep only ones for failed tests to avoid filling up a disk.
tmp_path_retention_policy = "failed"
testpaths = ["tests"]
